--- a/agriculture/src/App.css
+++ b/agriculture/src/App.css
@@ -8,7 +8,7 @@
 }
 
 
-::-webkit-scrollbar-button{
+::-webkit-scrollbar-button {
   background: gray;
   border-radius: 10px;
 }
@@ -125,7 +125,7 @@
           position: relative;
 
           &:nth-child(4) {
-            F p {
+            Fp {
               position: absolute;
               left: 30px;
               top: 30px;
@@ -616,6 +616,22 @@
     position: relative;
     padding: 30px;
 
+    .reset {
+      .input-control {
+        .icon-control {
+          position: absolute;
+          right: 0px;
+          border: none;
+        }
+
+        p {
+          position: absolute;
+          bottom: -26px;
+          right: 1px;
+        }
+      }
+    }
+
     .form-group {
       display: grid;
       place-items: center;
@@ -633,40 +649,25 @@
             border: none;
 
           }
+
+          p {
+            position: absolute;
+            bottom: -26px;
+            right: 1px;
+            color: gray;
+
+            &:hover {
+              cursor: pointer;
+              text-decoration: underline;
+            }
+          }
         }
       }
-
-      .input-group {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-
 
       &>div:last-child {
         color: rgb(117, 115, 115);
       }
 
-      &>div:nth-child(5) {
-        margin: 0;
-        margin-top: -20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        column-gap: 5px;
-
-        input {
-          width: 15px;
-          height: 15px;
-          accent-color: rgb(50, 130, 250);
-        }
-
-        label {
-          color: rgb(61, 61, 61);
-        }
-      }
 
       .input-control {
         display: flex;
@@ -674,20 +675,6 @@
         align-items: center;
         position: relative;
         height: 70px;
-
-        &:nth-child(4) {
-          label {
-            left: 5px;
-          }
-
-          .icon-control {
-            &:nth-child(3) {
-              position: absolute;
-              right: 0px;
-              border: none;
-            }
-          }
-        }
 
         label {
           position: absolute;
@@ -726,7 +713,6 @@
           justify-content: center;
           display: grid;
           align-items: center;
-          border: 1px solid;
           border-right: none;
           text-align: center;
           width: 40px;
@@ -735,6 +721,7 @@
       }
 
       button {
+        margin-top: 15px;
         background: royalblue;
         font-family: inherit;
         font-size: 18px;
@@ -812,26 +799,42 @@
   z-index: 15;
   background: rgba(255, 255, 255, 0.53);
   backdrop-filter: blur(10px);
+  top: 0;
 
   &>.icon-control {
     display: none;
   }
 
-  .logo {
+  &>.logo {
     grid-area: start;
     width: 20vw;
     display: grid;
     place-items: center;
     grid-auto-flow: column;
+    position: relative;
 
     img {
       margin: 0;
+      border-radius: 10px;
     }
 
     p {
-      font-size: 2.6vw;
-      margin: 0;
+      &:nth-child(2) {
+        font-size: 2.6vw;
+        margin: 0;
+        letter-spacing: 2px;
+        position: relative;
+        top: -7px;
+        width: max-content;
+      }
 
+      &:nth-child(3) {
+        position: absolute;
+        bottom: -13px;
+        left: 22%;
+        font-size: clamp(0.625rem, 0.5918rem + 0.1064vw, 0.6875rem);
+        width: max-content;
+      }
     }
   }
 
@@ -842,6 +845,16 @@
     grid-auto-flow: column;
     width: 50vw;
     grid-template-columns: auto;
+
+    a {
+      &:nth-child(3) {
+        p {
+          &::before {
+            left: -20%;
+          }
+        }
+      }
+    }
 
     p {
       font-weight: bold;
@@ -861,11 +874,6 @@
         transform-origin: 0% 100%100%;
       }
 
-      &:nth-child(3) {
-        &::before {
-          left: -20%;
-        }
-      }
 
       &:hover::before {
         transform: scaleX(1);
@@ -882,11 +890,14 @@
     align-items: center;
     justify-content: end;
     grid-auto-flow: column;
-    img{
+    padding-right: 10px;
+
+    img {
       border-radius: 50%;
-      outline:3px solid royalblue;
+      outline: 3px solid royalblue;
       outline-offset: 10px;
     }
+
     button {
       padding: 10px;
       background: rgb(55, 132, 240);
@@ -897,7 +908,8 @@
       border-radius: 20px;
       width: 80px;
       font-weight: bold;
-      &:nth-child(1){
+
+      &:nth-child(1) {
         margin-right: 50px;
       }
 
@@ -948,15 +960,29 @@
       flex-direction: row;
       column-gap: 20px;
       margin-bottom: 20px;
+      margin-left: -30px;
+      position: relative;
 
       img {
         margin: 0;
       }
 
       p {
-        font-size: 20px;
-        margin: 0;
+        &:nth-child(2) {
+          margin: 0;
+          letter-spacing: 2px;
+          position: relative;
+          top: -7px;
+          width: max-content;
+        }
 
+        &:nth-child(3) {
+          position: absolute;
+          bottom: -10px;
+          left: 40%;
+          width: max-content;
+          font-size: clamp(0.625rem, 0.5918rem + 0.1064vw, 0.6875rem);
+        }
       }
     }
 
@@ -1132,97 +1158,149 @@
   }
 }
 
-.about-root {
+.features-root {
   height: auto;
   padding: 20px;
   margin: 0;
   display: grid;
   place-items: center;
+  position: relative;
 
   &>div {
     display: flex;
-    column-gap: 100px;
-    margin: 0;
-    display: grid;
-    place-items: center;
-    width: 100%;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 
-    div {
-      position: relative;
+    &:nth-child(1) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      h1 {
+        border-bottom: 3px solid rgb(23, 165, 241);
+        padding: 0px 20px;
+        color: rgb(101, 185, 234);
+        text-align: center;
+      }
+    }
+
+    &:nth-child(2) {
+      column-gap: 100px;
+      margin: 0;
       display: grid;
       place-items: center;
-      overflow: hidden;
-      width: max-content;
-      border: 2px solid rgb(212, 208, 208);
-      margin: 10px;
-      padding: 10px;
-      border-radius: 20px;
+      width: 100%;
+      grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 
-      img {
-        border-radius: 50%;
-        padding: 20px;
-        object-fit: cover;
+      div {
+        position: relative;
+        display: grid;
+        place-items: center;
         overflow: hidden;
-        width: 300px;
-        height: 300px;
-      }
-
-      p {
-        font-size: larger;
-        border: 2px solid;
+        width: max-content;
+        border: 2px solid rgb(212, 208, 208);
+        margin: 10px;
+        padding: 10px;
+        border-radius: 20px;
 
         &:hover {
-          transform: scale(1.1);
-          cursor: pointer;
-          transition: transform .5s;
-          font-style: italic;
-          outline: 2px solid;
-          outline-offset: 5px;
-          border: none;
+          &>.text {
+            opacity: 1;
+            left: 8px;
+            z-index: 0;
+          }
         }
-      }
 
-      &:nth-child(1) {
+        .text {
+          width: 300px;
+          height: 300px;
+          position: absolute;
+          border: 2px solid;
+          border-radius: 50%;
+          padding: 15px;
+          top: 7px;
+          left: -40px;
+          background: rgba(0, 0, 0, .63);
+          color: white;
+          font-size: large;
+          text-align: center;
+          transition: all .5s;
+          opacity: 0;
+          display: grid;
+          place-items: center;
+
+        }
+
         img {
-          border: 4px solid violet;
+          border-radius: 50%;
+          padding: 20px;
+          object-fit: cover;
+          overflow: hidden;
+          width: 300px;
+          height: 300px;
         }
 
         p {
-          background: rgba(243, 10, 200, 0.23);
-          border-radius: 20px;
-          padding: 10px;
-          color: rgb(239, 26, 239);
-        }
-      }
-
-      &:nth-child(2) {
-        img {
-          border: 4px solid rgb(119, 119, 250);
+          font-size: larger;
         }
 
-        p {
-          background: rgba(72, 72, 250, .23);
-          border-radius: 20px;
-          padding: 10px;
-          color: blue;
-        }
-      }
+        &:nth-child(1) {
+          img {
+            border: 4px solid violet;
+          }
 
-      &:nth-child(3) {
-        img {
-          border: 4px solid rgb(139, 232, 139);
+          p {
+            background: rgba(243, 10, 200, 0.23);
+            border-radius: 20px;
+            padding: 10px;
+            color: rgb(239, 26, 239);
+          }
         }
 
-        p {
-          background: rgba(68, 215, 68, .23);
-          border-radius: 20px;
-          padding: 10px;
-          color: green;
+        &:nth-child(2) {
+          img {
+            border: 4px solid rgb(119, 119, 250);
+          }
+
+          p {
+            background: rgba(72, 72, 250, .23);
+            border-radius: 20px;
+            padding: 10px;
+            color: blue;
+          }
+        }
+
+        &:nth-child(3) {
+          img {
+            border: 4px solid rgb(139, 232, 139);
+          }
+
+          p {
+            background: rgba(68, 215, 68, .23);
+            border-radius: 20px;
+            padding: 10px;
+            color: green;
+          }
         }
       }
     }
+
+    &:nth-child(3) {
+      border: 2px solid;
+      background: rgba(0, 0, 0, .73);
+      position: absolute;
+      width: 100%;
+      height: 80%;
+      left: 0;
+      top: 100px;
+      display: grid;
+      place-items: center;
+
+      p {
+        color: white;
+        font-size: 30px;
+      }
+    }
   }
+
 }
 
 
@@ -1233,38 +1311,42 @@
   grid-template-areas: 'start end';
   position: relative;
 
-  .background{
+  .background {
     position: absolute;
     background: #48c6ef;
-    width:65%;
+    width: 65%;
     height: 100%;
-    left:0;
-    z-index:0;
-    border-radius:0% 100% 100% 0% / 100% 0% 100% 0%;
-    
+    left: 0;
+    z-index: 0;
+    border-radius: 0% 100% 100% 0% / 100% 0% 100% 0%;
+
   }
+
   .text {
-    z-index:1;
-    width: 50vw;
+    z-index: 1;
+    width: 45vw;
     height: 100px;
     display: flex;
     justify-content: center;
     height: 500px;
     flex-direction: column;
-    padding-left:10px;
+    padding-left: 10px;
     margin: 0;
     font-family: "DM Serif Display", serif;
     font-weight: 400;
     font-style: normal;
-    color:#252525;
+    color: #252525;
+
     p {
       &:nth-child(1) {
-        font-size: clamp(2rem, 0.3043rem + 3.4783vw, 3rem);
+        font-size: clamp(2rem, 0.3043rem + 2.4783vw, 3rem);
         text-align: start;
         margin: 0;
+        text-transform: capitalize;
       }
+
       &:nth-child(2) {
-        font-size: clamp(2rem, 0.3043rem + 3.4783vw, 3rem);
+        font-size: clamp(2rem, 0.3043rem + 2.4783vw, 3rem);
         text-align: start;
         margin: 0;
       }
@@ -1290,6 +1372,7 @@
   flex-direction: column;
   padding: 50px;
   overflow: hidden;
+
   .cube {
     width: 300px;
     height: 300px;
@@ -1463,12 +1546,13 @@
       display: grid;
       place-items: center;
       padding: 10px;
-      background: rgba(255,255,255,.43);
+      background: rgba(255, 255, 25, .43);
 
-      h2{
-        margin:0;
+      h2 {
+        margin: 0;
       }
-      p{
+
+      p {
         margin: 0;
       }
     }
@@ -1495,17 +1579,33 @@
     margin-bottom: 20px;
 
     div {
-      display: grid;
-      place-items: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 300px;
       width: 200px;
 
-      p {
+      h2 {
         font-size: 18px;
+      }
+
+      p {
+        font-size: 15px;
         letter-spacing: 2px;
         text-align: center;
 
         &:hover {
           text-decoration: underline;
+        }
+
+        a {
+          color: black;
+          text-decoration: none;
+
+          &:visited {
+            color: black;
+            text-decoration: none;
+          }
         }
       }
     }
@@ -1530,45 +1630,54 @@
     padding: 0px 10px;
     border-radius: 20px;
 
+    a {
+      text-decoration: none;
+      color: black;
+
+      i {
+        &:hover {
+          transform: scale(1);
+          transition: all .5s;
+          color: white;
+          background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+          border: 2px solid radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+        }
+      }
+    }
+
     i {
       font-size: 30px;
       border-radius: 50%;
       padding: 5px 10px;
       margin: 5px;
 
-      &:hover {
-        transform: scale(1);
-        transition: all .5s;
-
-        &:nth-child(1) {
+      &:nth-child(1) {
+        &:hover {
           color: white;
           border: 2px solid blue;
           background: blue;
-
         }
+      }
 
-        &:nth-child(2) {
+      &:nth-child(2) {
+        &:hover {
           color: white;
           background: black;
         }
+      }
 
-        &:nth-child(3) {
+      &:nth-child(3) {
+        &:hover {
           color: white;
           background: black;
         }
+      }
 
-        &:nth-child(4) {
+      &:nth-child(4) {
+        &:hover {
           color: white;
           background: rgb(14, 94, 254);
           border: 2px solid rgb(14, 94, 254);
-
-        }
-
-        &:nth-child(5) {
-          color: white;
-          background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-          border: 2px solid radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-
         }
       }
     }
@@ -1600,7 +1709,7 @@
 .registration-form-container {
   max-width: 400px;
   margin: 0 auto;
-  padding:30px;
+  padding: 30px;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
@@ -1684,8 +1793,151 @@
 
 }
 
+.workflow-container {
+  text-align: center;
+  margin-bottom: 20px;
+  display: grid;
+  place-items: center;
+  /* Add some space below the container */
+
+  button {
+    font-weight: bold;
+    color: white;
+    border-radius: 2rem;
+    cursor: pointer;
+    width: 95.02px;
+    height: 42.66px;
+    border: none;
+    background-color: #3653f8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  button .span-mother {
+    display: flex;
+    overflow: hidden;
+  }
+
+  button:hover .span-mother {
+    position: absolute;
+  }
+
+  button:hover .span-mother span {
+    transform: translateY(1.2em);
+  }
+
+  button .span-mother span:nth-child(1) {
+    transition: 0.2s;
+  }
+
+  button .span-mother span:nth-child(2) {
+    transition: 0.3s;
+  }
+
+  button .span-mother span:nth-child(3) {
+    transition: 0.4s;
+  }
+
+  button .span-mother span:nth-child(4) {
+    transition: 0.5s;
+  }
+
+  button .span-mother span:nth-child(5) {
+    transition: 0.6s;
+  }
+
+  button .span-mother span:nth-child(6) {
+    transition: 0.7s;
+  }
+
+  button .span-mother2 {
+    display: flex;
+    position: absolute;
+    overflow: hidden;
+  }
+
+  button .span-mother2 span {
+    transform: translateY(-1.2em);
+  }
+
+  button:hover .span-mother2 span {
+    transform: translateY(0);
+  }
+
+  button .span-mother2 span {
+    transition: 0.2s;
+  }
+
+  button .span-mother2 span:nth-child(2) {
+    transition: 0.3s;
+  }
+
+  button .span-mother2 span:nth-child(3) {
+    transition: 0.4s;
+  }
+
+  button .span-mother2 span:nth-child(4) {
+    transition: 0.5s;
+  }
+
+  button .span-mother2 span:nth-child(5) {
+    transition: 0.6s;
+  }
+
+  button .span-mother2 span:nth-child(6) {
+    transition: 0.7s;
+  }
+
+  .workflow-steps {
+    display: flex;
+    overflow-x: auto;
+    /* Enable horizontal scrolling */
+    white-space: nowrap;
+    /* Prevent line breaks */
+    margin-top: 10px;
+
+    /* Add some space above the steps */
+  }
+
+  .step {
+    flex: 0 0 auto;
+    /* Prevent steps from stretching */
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin: 10px;
+    display: grid;
+    place-items: center;
+    padding: 10px;
+    color: white;
+
+    &:nth-child(1) {
+      background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+    }
+
+    &:nth-child(2) {
+      background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+    }
+
+    &:nth-child(3) {
+      background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+    }
+
+    &:nth-child(4) {
+      background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+    }
+
+    &:nth-child(5) {
+      background-image: linear-gradient(to top, #ff9a9e 0%, #fecfef 99%, #fecfef 100%);
+    }
+  }
+}
+
+
 .sell-land {
   height: auto;
+  min-height: 80vh;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
@@ -1701,6 +1953,49 @@
     border-radius: 20px;
     display: grid;
     place-items: center;
+    position: relative;
+    z-index: 0;
+
+    .verify-wrong {
+      position: absolute;
+      right: 5px;
+      top: 2px;
+      color: #252525;
+      padding: 5px;
+      border-radius: 20px;
+      border: none;
+      background: rgba(255, 0, 0, 0.225);
+      color: rgb(253, 28, 28);
+    }
+
+    .verify-right {
+      position: absolute;
+      right: 5px;
+      top: 2px;
+      color: #252525;
+      padding: 5px;
+      border-radius: 20px;
+      border: none;
+      background: rgba(0, 255, 34, 0.225);
+      color: rgb(51, 253, 28);
+    }
+
+    .sale {
+      border: 2px solid;
+      background: red;
+      color: white;
+      position: absolute;
+      left: -2px;
+      top: 0;
+      z-index: 5;
+      width: 70px;
+      height: 30px;
+      padding: 10px;
+      --mask: conic-gradient(from -135deg at right, #0000, #000 1deg 89deg, #0000 90deg) 50%/100% 60px;
+      -webkit-mask: var(--mask);
+      mask: var(--mask);
+
+    }
 
     .location {
       width: 280px;
@@ -1710,7 +2005,7 @@
       align-items: end;
       column-gap: 15px;
       position: relative;
-      top: -70px;
+      top: -50px;
 
       i {
         font-size: 50px;
@@ -1728,27 +2023,29 @@
       height: 60px;
       font-weight: bold;
       background: royalblue;
-      color:white;
+      color: white;
       font-size: 20px;
-      border:none;
+      border: none;
       border-radius: 50px;
     }
   }
-  .center{
+
+  .center {
     display: flex;
     justify-content: center;
     align-items: center;
-    width:100vw;
+    width: 100vw;
     height: 700px;
-    margin:0;
+    margin: 0;
     position: absolute;
-    top:0;
-    font-size:30px;
+    top: 0;
+    font-size: 30px;
   }
 }
 
 .buy-land {
   height: auto;
+  min-height: 80vh;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
@@ -1790,21 +2087,22 @@
       height: 60px;
       font-weight: bold;
       background: royalblue;
-      color:white;
+      color: white;
       font-size: 20px;
-      border:none;
+      border: none;
       border-radius: 50px;
     }
   }
-  .center{
+
+  .center {
     display: grid;
     place-items: center;
-    width:100vw;
+    width: 100vw;
     height: 700px;
-    margin:0;
+    margin: 0;
     position: absolute;
-    top:0;
-    font-size:30px;
+    top: 0;
+    font-size: 30px;
   }
 }
 
@@ -1945,9 +2243,10 @@
     position: relative;
     margin-bottom: 80px;
 
-    .background{
-      width:100%;
+    .background {
+      width: 100%;
     }
+
     .container {
       width: 100%;
       padding-top: 50px;
